# trajectory_solver

./: .gitignore  ReadMe.md  package.xml  setup.py
scripts/: osqp_ee_traj.py  osqp_least_squares.py  osqp_pose_problem.py
src/trajectory_solver/: EeTrajOpt.py  PoseProblem.py  PoseTypes.py  QPcoeffs.py  SimultaneousProgram.py  SplineConstraints.py  Splines.py
test/: test_pose_problem.py  test_simultaneous_program.py  test_spline_constraints.py
trajectory_solver_core/: CMakeLists.txt
trajectory_solver_core/scripts/: osqp_ee_traj.py  osqp_joint_problem.py  osqp_joint_traj.py  osqp_least_squares.py  osqp_pose_problem.py
trajectory_solver_core/src/trajectory_solver/: DualArmNames.py  EeTrajOpt.py  JointSpaceProblem.py  PoseProblem.py  PoseTypes.py  QPcoeffs.py  SplineConstraints.py
trajectory_solver_core/test/: test_pose_problem.py  test_spline_constraints.py
trajectory_solver_ros/: CMakeLists.txt  package.xml  setup.py
trajectory_solver_ros/msg/: EndPointPoseMsg.msg
trajectory_solver_ros/src/trajectory_solver_ros/: end_point_pose_pub.py
