<?xml version="1.0"?>
<package format="2">
  <name>trajectory_solver_ros</name>
  <version>1.1.0</version>
  <description>Trajectory Solver Package Ros Interface</description>

  <license>BSD</license>

  <maintainer email="mitch@robots.ox.ac.uk">Alexander Mitchell</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>trajectory_solver</exec_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

</package>